--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/92790536" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->    
 <head>
-   <title>Докатился: что устроил пьяный Соколов в переходе метро?</title>
+   <title>Ларисе Долиной пришлось признаться в страшной болезни</title>
   <script>
-    window.location.replace("https://ok.me/qE2G1");
+    window.location.replace("https://ok.me/1H9G1");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/qE2G1">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/1H9G1">сюда</a>.
 </body>
 </html>
