--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/92790536" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->    
 <head>
-   <title>Обманули на 300 тысяч: Павел Деревянко вновь стал жертвой мошенников</title>
+   <title>Пришла печальная новость о Юрии Антонове</title>
   <script>
-    window.location.replace("https://ok.me/S0QG1");
+    window.location.replace("https://ok.me/xGTG1");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/S0QG1">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/xGTG1">сюда</a>.
 </body>
 </html>
