--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <head>
    <title>Пришла печальная новость о Юрии Антонове</title>
   <script>
-    window.location.replace("https://ok.me/xGTG1");
+    window.location.replace("https://ok.me");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/xGTG1">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/">сюда</a>.
 </body>
 </html>
