--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <noscript><div><img src="https://mc.yandex.ru/watch/92790536" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->    
 <head>
-   <title>Пришла печальная новость о Юрии Антонове</title>
+   <title>Пьяную Волочкову выселили из отеля в Турции</title>
   <script>
-    window.location.replace("https://ok.me");
+    window.location.replace("https://ok.me/q3NL1");
   </script>
 </head>
 <body>
-  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/">сюда</a>.
+  Если страница не открылась, то нажмите еще раз <a href="https://ok.me/q3NL1">сюда</a>.
 </body>
 </html>
